Update admin functionality, fetch all users and create couriers
